--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+			<version>3.1.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
